--- a/visible/visible.client/src/index.css
+++ b/visible/visible.client/src/index.css
@@ -8,6 +8,8 @@
   color: rgba(255, 255, 255, 0.87);
   background-color: #000000;
 
+  overflow: hidden;
+
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
